tooling/nargo_cli/tests/snapshots/compile_failure/static_assert_plus/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: 2 + 3 != 6
  ┌─ src/main.nr:6:5
  │
6 │     std::static_assert(xy == 6, "2 + 3 != 6");
  │     -----------------------------------------
  │
  = Call stack:
    1: main
            at src/main.nr:6:5

Aborting due to 1 previous error
